samples/_failures_safe/1761512677_801e1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e4d3326.c: In function ‘main’:
./samples/SAFE/__tmp_9e4d3326.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9e4d3326.c:139:5: error: expected declaration or statement at end of input
  139 |     if
      |     ^~
